--- a/arachne/subgraph_matching_with_random_graphs_sample.ipynb
+++ b/arachne/subgraph_matching_with_random_graphs_sample.ipynb
@@ -2,10 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f651e065",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    _         _                   _       \n",
+      "   / \\   _ __| | _____  _   _  __| | __ _ \n",
+      "  / _ \\ | '__| |/ / _ \\| | | |/ _` |/ _` |\n",
+      " / ___ \\| |  |   < (_) | |_| | (_| | (_| |\n",
+      "/_/   \\_\\_|  |_|\\_\\___/ \\__,_|\\__,_|\\__,_|\n",
+      "                                          \n",
+      "\n",
+      "Client Version: v2024.06.21+0.gcf6eeacde.dirty\n"
+     ]
+    }
+   ],
    "source": [
     "import arkouda as ak\n",
     "import arachne as ar\n",
@@ -17,10 +32,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "671cb378",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "connected to arkouda server tcp://*:5555\n"
+     ]
+    }
+   ],
    "source": [
     "# NOTE: Make sure to change the server name to whatever is applicable in your environment. If running locally, then use only ak.connect().\n",
     "ak.connect(\"n28\", 5555)"
@@ -28,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "e0ab4242",
    "metadata": {},
    "outputs": [],
@@ -42,10 +65,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "36d90c88",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Building property graph with 100 vertices and 949 edges took 3.03 seconds.\n"
+     ]
+    }
+   ],
    "source": [
     "import time\n",
     "\n",
@@ -134,10 +165,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "36aa6159",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "We found 116.0 isos inside of the graph\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"TEST COMBINED PICKER\"\"\"\n",
     "subgraph = ar.PropGraph()\n",
@@ -165,10 +204,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "d176e508",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "We found 304.0 isos inside of the graph\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"TEST VERTEX PICKER\"\"\"\n",
     "subgraph = ar.PropGraph()\n",
@@ -190,10 +237,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "f4c138bc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "We found 303.0 isos inside of the graph\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"TEST EDGE PICKER\"\"\"\n",
     "subgraph = ar.PropGraph()\n",
@@ -213,10 +268,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "9e49df46",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "We found 670.0 isos inside of the graph\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"TEST NO PICKER\"\"\"\n",
     "subgraph = ar.PropGraph()\n",
@@ -230,10 +293,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "2940d068",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "We found 116.0 isos inside of the graph\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"VF2-PS COMBINED GROUND TRUTH\"\"\"\n",
     "subgraph = ar.PropGraph()\n",
@@ -261,10 +332,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "f2ab4c8a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "We found 304.0 isos inside of the graph\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"VF2-PS VERTEX PICKER GROUND TRUTH\"\"\"\n",
     "subgraph = ar.PropGraph()\n",
@@ -286,10 +365,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "487c288b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "We found 303.0 isos inside of the graph\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"VF2-PS EDGE PICKER GROUND TRUTH\"\"\"\n",
     "subgraph = ar.PropGraph()\n",
@@ -309,10 +396,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "842b82a8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "We found 670.0 isos inside of the graph\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"VF2-PS NO ATTRIBUTES GROUND TRUTH\"\"\"\n",
     "subgraph = ar.PropGraph()\n",
