simple_new graph for tests

--- a/arachne/analysis_pipeline_sample.ipynb
+++ b/arachne/analysis_pipeline_sample.ipynb
@@ -26,10 +26,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "35c305f2",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    _         _                   _       \n",
+      "   / \\   _ __| | _____  _   _  __| | __ _ \n",
+      "  / _ \\ | '__| |/ / _ \\| | | |/ _` |/ _` |\n",
+      " / ___ \\| |  |   < (_) | |_| | (_| | (_| |\n",
+      "/_/   \\_\\_|  |_|\\_\\___/ \\__,_|\\__,_|\\__,_|\n",
+      "                                          \n",
+      "\n",
+      "Client Version: v2024.06.21\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -41,7 +55,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Building property graph with 3 vertices and 4 edges took 1.7 seconds.\n"
+      "Building property graph with 11 vertices and 16 edges took 1.74 seconds.\n"
      ]
     }
    ],
@@ -64,8 +78,8 @@
     "### Build graph from randomly generated source and destination arrays.\n",
     "# 1. Use Arkouda's randint to generate the random edge arrays.\n",
     "\n",
-    "src = ak.array([0, 1, 2, 2, 3])\n",
-    "dst = ak.array([1, 2, 0, 3, 1])\n",
+    "src = ak.array([1, 2, 1, 3, 4, 2, 5, 4, 5, 6, 3, 8, 9, 4, 9, 10])\n",
+    "dst = ak.array([0, 1, 3, 4, 1, 4, 2, 5, 6, 7, 8, 9, 3, 9, 10, 4])\n",
     "\n",
     "# 2. Build temporary property graph to get sorted edges and nodes lists.\n",
     "temp_prop_graph = ar.PropGraph()\n",
