--- a/arachne/subgraph_matching_with_random_graphs_sample.ipynb
+++ b/arachne/subgraph_matching_with_random_graphs_sample.ipynb
@@ -2,25 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 90,
    "id": "f651e065",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "    _         _                   _       \n",
-      "   / \\   _ __| | _____  _   _  __| | __ _ \n",
-      "  / _ \\ | '__| |/ / _ \\| | | |/ _` |/ _` |\n",
-      " / ___ \\| |  |   < (_) | |_| | (_| | (_| |\n",
-      "/_/   \\_\\_|  |_|\\_\\___/ \\__,_|\\__,_|\\__,_|\n",
-      "                                          \n",
-      "\n",
-      "Client Version: v2024.06.21+0.gcf6eeacde.dirty\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import arkouda as ak\n",
     "import arachne as ar\n",
@@ -32,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 91,
    "id": "671cb378",
    "metadata": {},
    "outputs": [
@@ -46,18 +31,156 @@
    ],
    "source": [
     "# NOTE: Make sure to change the server name to whatever is applicable in your environment. If running locally, then use only ak.connect().\n",
-    "ak.connect(\"n28\", 5555)"
+    "ak.connect(\"n85\", 5555)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7eea5b11",
+   "metadata": {},
+   "source": [
+    "### Simple Graph Experiments"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 92,
+   "id": "0e3a275a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "src_main = [1, 2, 1, 3, 4, 2, 5, 4, 5, 6, 3, 8, 9, 4, 9, 10]\n",
+    "dst_main = [0, 1, 3, 4, 1, 4, 2, 5, 6, 7, 8, 9, 3, 9, 10, 4]\n",
+    "src_maingraph = ak.array(src_main)\n",
+    "dst_maingraph = ak.array(dst_main)\n",
+    "\n",
+    "maingraph_nodes = list(set(src_main) | set(dst_main))\n",
+    "maingraph_nodes.sort()\n",
+    "\n",
+    "labels1_maingraph = ak.array([\"yellow\", \"red\", \"blue\", \"blue\", \"blue\", \"red\", \"blue\",\"yellow\", \"blue\", \"yellow\", \"blue\"])\n",
+    "labels2_maingraph = ak.array([10, 12, 10, 11, 11, 12, 11, 13, 10, 13, 10])\n",
+    "labels3_maingraph = ak.array([False, True, True, True, True, True, False, False, True, False, False])\n",
+    "\n",
+    "rels1_maingraph = ak.array([10, 5, 10, 10, 10, 10, 10, 10, 10, 5, 5, 10, 10, 5, 5, 10])\n",
+    "\n",
+    "edge_df = ak.DataFrame({\"src\":src_maingraph, \"dst\":dst_maingraph,\n",
+    "                        \"value\":rels1_maingraph \n",
+    "})\n",
+    "node_df = ak.DataFrame({\"nodes\":ak.array(maingraph_nodes),\n",
+    "                        \"color\":labels1_maingraph,\n",
+    "                        \"value\":labels2_maingraph,\n",
+    "                        \"True?\":labels3_maingraph\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "f38fcded",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pg = ar.PropGraph()\n",
+    "pg.load_edge_attributes(edge_df, source_column=\"src\", destination_column=\"dst\")\n",
+    "pg.load_node_attributes(node_df, node_column=\"nodes\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "id": "9aa2b97c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "src_list = [0, 1, 2, 1]\n",
+    "dst_list = [1, 2, 0, 3]\n",
+    "src_subgraph = ak.array(src_list)\n",
+    "dst_subgraph = ak.array(dst_list)\n",
+    "\n",
+    "subgraph_nodes = list(set(src_list) | set(dst_list))\n",
+    "subgraph_nodes.sort()\n",
+    "\n",
+    "labels1_subgraph = ak.array([\"blue\", \"blue\", \"red\", \"yellow\"])\n",
+    "labels2_subgraph = ak.array([10, 11, 12, 13])\n",
+    "labels3_subgraph = ak.array([True, True, True, False])\n",
+    "\n",
+    "rels1_subgraph = ak.array([10, 10, 10, 5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "35198cf9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "We found 2.0 monos inside of the graph\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"TEST COMBINED PICKER ON SIMPLE GRAPH\"\"\"\n",
+    "edge_df = ak.DataFrame({\"src\":src_subgraph, \"dst\":dst_subgraph,\n",
+    "                        \"value\":rels1_subgraph \n",
+    "})\n",
+    "node_df = ak.DataFrame({\"nodes\":ak.array(subgraph_nodes),\n",
+    "                        \"color\":labels1_subgraph,\n",
+    "                        \"value\":labels2_subgraph,\n",
+    "                        \"True?\":labels3_subgraph\n",
+    "})\n",
+    "\n",
+    "sg = ar.PropGraph()\n",
+    "sg.load_edge_attributes(edge_df, source_column=\"src\", destination_column=\"dst\")\n",
+    "sg.load_node_attributes(node_df, node_column=\"nodes\")\n",
+    "\n",
+    "isos_as_vertices = ar.subgraph_isomorphism(pg, sg, \n",
+    "                                           semantic_check=\"or\", algorithm_type=\"si\", return_isos_as=\"vertices\")\n",
+    "print(f\"We found {len(isos_as_vertices[0])/len(sg)} monos inside of the graph\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "id": "c74f565e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1 2 3]\n",
+      "[0 1 1 2]\n",
+      "[1 2 3 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sg.nodes())\n",
+    "\n",
+    "print(sg.edges()[0])\n",
+    "print(sg.edges()[1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cf4da901",
+   "metadata": {},
+   "source": [
+    "### Erdos-Renyi Experiments Below"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "id": "e0ab4242",
    "metadata": {},
    "outputs": [],
    "source": [
     "n = 100\n",
-    "m = 1000\n",
+    "m = 10_000\n",
     "s = 2\n",
     "x = 2\n",
     "y = 2"
@@ -65,18 +188,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "36d90c88",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Building property graph with 100 vertices and 949 edges took 3.03 seconds.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import time\n",
     "\n",
@@ -103,32 +218,32 @@
     "nodes = temp_prop_graph.nodes()\n",
     "\n",
     "# 2. Generate random integer attributes for both vertices and edges.\n",
-    "int_array_nodes = ak.randint(-1, x, num_nodes, dtype=ak.dtype('int64'))\n",
+    "int_array_nodes = ak.randint(0, x, num_nodes, dtype=ak.dtype('int64'))\n",
     "uint_array_nodes = ak.randint(0, x, num_nodes, dtype=ak.dtype('uint64'))\n",
     "real_array_nodes = ak.randint(0, x, num_nodes, dtype=ak.dtype('float64'))\n",
     "bool_array_nodes = ak.randint(0, x, num_nodes, dtype=ak.dtype('bool'))\n",
-    "strings_array_nodes = ak.random_strings_uniform(minlen=2, maxlen=3, size=num_nodes, characters=\"uppercase\")\n",
+    "strings_array_nodes = ak.random_strings_uniform(minlen=1, maxlen=2, size=num_nodes, characters=\"uppercase\")\n",
     "categorical_array_nodes = ak.Categorical(strings_array_nodes)\n",
     "\n",
-    "int_array_edges = ak.randint(-1, x, num_edges, dtype=ak.dtype('int64'))\n",
+    "int_array_edges = ak.randint(0, x, num_edges, dtype=ak.dtype('int64'))\n",
     "uint_array_edges = ak.randint(0, x, num_edges, dtype=ak.dtype('uint64'))\n",
     "real_array_edges = ak.randint(0, x, num_edges, dtype=ak.dtype('float64'))\n",
     "bool_array_edges = ak.randint(0, x, num_edges, dtype=ak.dtype('bool'))\n",
-    "strings_array_edges = ak.random_strings_uniform(minlen=2, maxlen=3, size=num_edges, characters=\"uppercase\")\n",
+    "strings_array_edges = ak.random_strings_uniform(minlen=1, maxlen=2, size=num_edges, characters=\"uppercase\")\n",
     "categorical_array_edges = ak.Categorical(strings_array_edges)\n",
     "\n",
     "# 3. Create dataframe to load into a new property graph.\n",
     "edge_df = ak.DataFrame({\"src\":edges[0], \"dst\":edges[1], \n",
     "                        \"ints\":int_array_edges, \n",
     "                        \"uints\":uint_array_edges,\n",
-    "                        \"reals\":real_array_edges,\n",
+    "                        #\"reals\":real_array_edges,\n",
     "                        \"bools\":bool_array_edges,\n",
     "                        \"strings\":strings_array_edges,\n",
     "                        \"categoricals\":categorical_array_edges})\n",
     "node_df = ak.DataFrame({\"nodes\":nodes, \n",
     "                        \"ints\":int_array_nodes, \n",
     "                        \"uints\":uint_array_nodes,\n",
-    "                        \"reals\":real_array_nodes,\n",
+    "                        #\"reals\":real_array_nodes,\n",
     "                        \"bools\":bool_array_nodes,\n",
     "                        \"strings\":strings_array_nodes,\n",
     "                        \"categoricals\":categorical_array_nodes})\n",
@@ -148,49 +263,41 @@
     "subgraph_nodes = list(set(src_list) | set(dst_list))\n",
     "subgraph_nodes.sort()\n",
     "\n",
-    "subgraph_int_array_nodes = ak.array([-1] * len(subgraph_nodes))\n",
+    "subgraph_int_array_nodes = ak.array([1] * len(subgraph_nodes))\n",
     "subgraph_uint_array_nodes = ak.array([0] * len(subgraph_nodes), dtype=ak.dtype('uint64'))\n",
-    "subgraph_real_array_nodes = ak.array([0.0] * len(subgraph_nodes))\n",
-    "subgraph_bool_array_nodes = ak.array([True] * len(subgraph_nodes))\n",
-    "subgraph_strings_array_nodes = ak.array([\"AB\"] * len(subgraph_nodes))\n",
+    "subgraph_real_array_nodes = ak.array([float(real_array_nodes[0])] * len(subgraph_nodes))\n",
+    "subgraph_bool_array_nodes = ak.array([False] * len(subgraph_nodes))\n",
+    "subgraph_strings_array_nodes = ak.array([str(prop_graph.node_attributes[\"strings\"][0])] * len(subgraph_nodes))\n",
     "subgraph_categorical_array_nodes = ak.Categorical(subgraph_strings_array_nodes)\n",
     "\n",
-    "subgraph_int_array_edges = ak.array([-1] * len(src_list))\n",
+    "subgraph_int_array_edges = ak.array([1] * len(src_list))\n",
     "subgraph_uint_array_edges = ak.array([0] * len(src_list), dtype=ak.dtype('uint64'))\n",
-    "subgraph_real_array_edges = ak.array([0.0] * len(src_list))\n",
+    "subgraph_real_array_edges = ak.array([float(real_array_edges[0])] * len(src_list))\n",
     "subgraph_bool_array_edges = ak.array([True] * len(src_list))\n",
-    "subgraph_strings_array_edges = ak.array([\"AB\"] * len(src_list))\n",
+    "subgraph_strings_array_edges = ak.array([str(prop_graph.edge_attributes[\"strings\"][0])] * len(src_list))\n",
     "subgraph_categorical_array_edges = ak.Categorical(subgraph_strings_array_edges)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "36aa6159",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "We found 116.0 isos inside of the graph\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"TEST COMBINED PICKER\"\"\"\n",
     "subgraph = ar.PropGraph()\n",
     "edge_df_h = ak.DataFrame({\"src\":src_subgraph, \"dst\":dst_subgraph,\n",
     "                          \"ints\":subgraph_int_array_edges, \n",
     "                          \"uints\":subgraph_uint_array_edges,\n",
-    "                          \"reals\":subgraph_real_array_edges,\n",
+    "                          #\"reals\":subgraph_real_array_edges,\n",
     "                          \"bools\":subgraph_bool_array_edges,\n",
     "                          \"strings\":subgraph_strings_array_edges,\n",
     "                          \"categoricals\":subgraph_categorical_array_edges})\n",
     "node_df_h = ak.DataFrame({\"nodes\": ak.array(subgraph_nodes), \n",
     "                          \"ints\":subgraph_int_array_nodes, \n",
     "                          \"uints\":subgraph_uint_array_nodes,\n",
-    "                          \"reals\":subgraph_real_array_nodes,\n",
+    "                          #\"reals\":subgraph_real_array_nodes,\n",
     "                          \"bools\":subgraph_bool_array_nodes,\n",
     "                          \"strings\":subgraph_strings_array_nodes,\n",
     "                          \"categoricals\":subgraph_categorical_array_nodes})\n",
@@ -204,18 +311,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "d176e508",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "We found 304.0 isos inside of the graph\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"TEST VERTEX PICKER\"\"\"\n",
     "subgraph = ar.PropGraph()\n",
@@ -223,7 +322,7 @@
     "node_df_h = ak.DataFrame({\"nodes\": ak.array(subgraph_nodes), \n",
     "                          \"ints\":subgraph_int_array_nodes, \n",
     "                          \"uints\":subgraph_uint_array_nodes,\n",
-    "                          \"reals\":subgraph_real_array_nodes,\n",
+    "                          # \"reals\":subgraph_real_array_nodes,\n",
     "                          \"bools\":subgraph_bool_array_nodes,\n",
     "                          \"strings\":subgraph_strings_array_nodes,\n",
     "                          \"categoricals\":subgraph_categorical_array_nodes})\n",
@@ -237,25 +336,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "f4c138bc",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "We found 303.0 isos inside of the graph\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"TEST EDGE PICKER\"\"\"\n",
     "subgraph = ar.PropGraph()\n",
     "edge_df_h = ak.DataFrame({\"src\":src_subgraph, \"dst\":dst_subgraph,\n",
     "                          \"ints\":subgraph_int_array_edges, \n",
     "                          \"uints\":subgraph_uint_array_edges,\n",
-    "                          \"reals\":subgraph_real_array_edges,\n",
+    "                          # \"reals\":subgraph_real_array_edges,\n",
     "                          \"bools\":subgraph_bool_array_edges,\n",
     "                          \"strings\":subgraph_strings_array_edges,\n",
     "                          \"categoricals\":subgraph_categorical_array_edges})\n",
@@ -268,18 +359,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "9e49df46",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "We found 670.0 isos inside of the graph\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"TEST NO PICKER\"\"\"\n",
     "subgraph = ar.PropGraph()\n",
@@ -293,32 +376,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "2940d068",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "We found 116.0 isos inside of the graph\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"VF2-PS COMBINED GROUND TRUTH\"\"\"\n",
     "subgraph = ar.PropGraph()\n",
     "edge_df_h = ak.DataFrame({\"src\":src_subgraph, \"dst\":dst_subgraph,\n",
     "                          \"ints\":subgraph_int_array_edges, \n",
     "                          \"uints\":subgraph_uint_array_edges,\n",
-    "                          \"reals\":subgraph_real_array_edges,\n",
+    "                          # \"reals\":subgraph_real_array_edges,\n",
     "                          \"bools\":subgraph_bool_array_edges,\n",
     "                          \"strings\":subgraph_strings_array_edges,\n",
     "                          \"categoricals\":subgraph_categorical_array_edges})\n",
     "node_df_h = ak.DataFrame({\"nodes\": ak.array(subgraph_nodes), \n",
     "                          \"ints\":subgraph_int_array_nodes, \n",
     "                          \"uints\":subgraph_uint_array_nodes,\n",
-    "                          \"reals\":subgraph_real_array_nodes,\n",
+    "                          # \"reals\":subgraph_real_array_nodes,\n",
     "                          \"bools\":subgraph_bool_array_nodes,\n",
     "                          \"strings\":subgraph_strings_array_nodes,\n",
     "                          \"categoricals\":subgraph_categorical_array_nodes})\n",
@@ -332,18 +407,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "f2ab4c8a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "We found 304.0 isos inside of the graph\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"VF2-PS VERTEX PICKER GROUND TRUTH\"\"\"\n",
     "subgraph = ar.PropGraph()\n",
@@ -351,7 +418,7 @@
     "node_df_h = ak.DataFrame({\"nodes\": ak.array(subgraph_nodes), \n",
     "                          \"ints\":subgraph_int_array_nodes, \n",
     "                          \"uints\":subgraph_uint_array_nodes,\n",
-    "                          \"reals\":subgraph_real_array_nodes,\n",
+    "                          # \"reals\":subgraph_real_array_nodes,\n",
     "                          \"bools\":subgraph_bool_array_nodes,\n",
     "                          \"strings\":subgraph_strings_array_nodes,\n",
     "                          \"categoricals\":subgraph_categorical_array_nodes})\n",
@@ -365,25 +432,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "487c288b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "We found 303.0 isos inside of the graph\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"VF2-PS EDGE PICKER GROUND TRUTH\"\"\"\n",
     "subgraph = ar.PropGraph()\n",
     "edge_df_h = ak.DataFrame({\"src\":src_subgraph, \"dst\":dst_subgraph,\n",
     "                          \"ints\":subgraph_int_array_edges, \n",
     "                          \"uints\":subgraph_uint_array_edges,\n",
-    "                          \"reals\":subgraph_real_array_edges,\n",
+    "                          # \"reals\":subgraph_real_array_edges,\n",
     "                          \"bools\":subgraph_bool_array_edges,\n",
     "                          \"strings\":subgraph_strings_array_edges,\n",
     "                          \"categoricals\":subgraph_categorical_array_edges})\n",
@@ -396,18 +455,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "842b82a8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "We found 670.0 isos inside of the graph\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"VF2-PS NO ATTRIBUTES GROUND TRUTH\"\"\"\n",
     "subgraph = ar.PropGraph()\n",
