Exact output as CPP

--- a/arachne/analysis_pipeline_sample.ipynb
+++ b/arachne/analysis_pipeline_sample.ipynb
@@ -29,7 +29,22 @@
    "execution_count": null,
    "id": "35c305f2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "connected to arkouda server tcp://*:5555\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Building property graph with 5 vertices and 6 edges took 1.67 seconds.\n"
+     ]
+    }
+   ],
    "source": [
     "import arkouda as ak\n",
     "import arachne as ar\n",
@@ -39,7 +54,7 @@
     "import os\n",
     "import time\n",
     "\n",
-    "ak.connect(\"n113\", 5555)\n",
+    "ak.connect(\"n85\", 5555)\n",
     "n = 100\n",
     "m = 1000\n",
     "s = 2\n",
@@ -49,8 +64,11 @@
     "### Build graph from randomly generated source and destination arrays.\n",
     "# 1. Use Arkouda's randint to generate the random edge arrays.\n",
     "\n",
-    "src = ak.array([1, 2, 1, 3, 4, 2, 5, 4, 5, 6, 3, 8, 9, 4, 9, 10])\n",
-    "dst = ak.array([0, 1, 3, 4, 1, 4, 2, 5, 6, 7, 8, 9, 3, 9, 10, 4])\n",
+    "#src = ak.array([1, 2, 1, 3, 4, 2, 5, 4, 5, 6, 3, 8, 9, 4, 9, 10])\n",
+    "#dst = ak.array([0, 1, 3, 4, 1, 4, 2, 5, 6, 7, 8, 9, 3, 9, 10, 4])#\n",
+    "# \n",
+    "src = ak.array([0, 1,2,2,3,4])\n",
+    "dst = ak.array([1, 2,0,3,4,2])\n",
     "\n",
     "# 2. Build temporary property graph to get sorted edges and nodes lists.\n",
     "temp_prop_graph = ar.PropGraph()\n",
