edge-based subgraph reordering

--- a/arachne/subgraph_matching_with_random_graphs_sample.ipynb
+++ b/arachne/subgraph_matching_with_random_graphs_sample.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 38,
    "id": "f651e065",
    "metadata": {},
    "outputs": [],
@@ -17,21 +17,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": null,
    "id": "671cb378",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "connected to arkouda server tcp://*:5555\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# NOTE: Make sure to change the server name to whatever is applicable in your environment. If running locally, then use only ak.connect().\n",
-    "ak.connect(\"n85\", 5555)"
+    "ak.connect(\"n115\", 5555)"
    ]
   },
   {
@@ -44,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 40,
    "id": "0e3a275a",
    "metadata": {},
    "outputs": [],
@@ -60,6 +52,7 @@
     "labels1_maingraph = ak.array([\"yellow\", \"red\", \"blue\", \"blue\", \"blue\", \"red\", \"blue\",\"yellow\", \"blue\", \"yellow\", \"blue\"])\n",
     "labels2_maingraph = ak.array([10, 12, 10, 11, 11, 12, 11, 13, 10, 13, 10])\n",
     "labels3_maingraph = ak.array([False, True, True, True, True, True, False, False, True, False, False])\n",
+    "labels4_maingraph = ak.Categorical(labels1_maingraph)\n",
     "\n",
     "rels1_maingraph = ak.array([10, 5, 10, 10, 10, 10, 10, 10, 10, 5, 5, 10, 10, 5, 5, 10])\n",
     "\n",
@@ -69,13 +62,14 @@
     "node_df = ak.DataFrame({\"nodes\":ak.array(maingraph_nodes),\n",
     "                        \"color\":labels1_maingraph,\n",
     "                        \"value\":labels2_maingraph,\n",
-    "                        \"True?\":labels3_maingraph\n",
+    "                        \"True?\":labels3_maingraph,\n",
+    "                        \"cats\":labels4_maingraph\n",
     "})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 41,
    "id": "f38fcded",
    "metadata": {},
    "outputs": [],
@@ -87,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 42,
    "id": "9aa2b97c",
    "metadata": {},
    "outputs": [],
@@ -103,24 +97,17 @@
     "labels1_subgraph = ak.array([\"blue\", \"blue\", \"red\", \"yellow\"])\n",
     "labels2_subgraph = ak.array([10, 11, 12, 13])\n",
     "labels3_subgraph = ak.array([True, True, True, False])\n",
+    "labels4_subgraph = ak.Categorical(labels1_subgraph)\n",
     "\n",
     "rels1_subgraph = ak.array([10, 10, 10, 5])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": null,
    "id": "35198cf9",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "We found 2.0 monos inside of the graph\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"TEST COMBINED PICKER ON SIMPLE GRAPH\"\"\"\n",
     "edge_df = ak.DataFrame({\"src\":src_subgraph, \"dst\":dst_subgraph,\n",
@@ -129,39 +116,74 @@
     "node_df = ak.DataFrame({\"nodes\":ak.array(subgraph_nodes),\n",
     "                        \"color\":labels1_subgraph,\n",
     "                        \"value\":labels2_subgraph,\n",
-    "                        \"True?\":labels3_subgraph\n",
+    "                        \"True?\":labels3_subgraph,\n",
+    "                        \"cats\":labels4_subgraph\n",
     "})\n",
     "\n",
     "sg = ar.PropGraph()\n",
-    "sg.load_edge_attributes(edge_df, source_column=\"src\", destination_column=\"dst\")\n",
-    "sg.load_node_attributes(node_df, node_column=\"nodes\")\n",
+    "sg.load_edge_attributes(edge_df, source_column=\"src\", destination_column=\"dst\", convert_string_relationships_to_categoricals=False)\n",
+    "sg.load_node_attributes(node_df, node_column=\"nodes\", convert_string_labels_to_categoricals=False)\n",
     "\n",
     "isos_as_vertices = ar.subgraph_isomorphism(pg, sg, \n",
-    "                                           semantic_check=\"or\", algorithm_type=\"si\", return_isos_as=\"vertices\")\n",
-    "print(f\"We found {len(isos_as_vertices[0])/len(sg)} monos inside of the graph\")"
+    "                                           semantic_check = \"or\", algorithm_type = \"si\", \n",
+    "                                           reorder = True, return_isos_as = \"vertices\")\n",
+    "print(f\"We found {len(isos_as_vertices[0])/len(sg)} monos inside of the graph with reordering\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
-   "id": "c74f565e",
+   "execution_count": null,
+   "id": "4e309a93",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0 1 2 3]\n",
-      "[0 1 1 2]\n",
-      "[1 2 3 0]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(sg.nodes())\n",
+    "\"\"\"TEST COMBINED PICKER ON SIMPLE GRAPH\"\"\"\n",
+    "edge_df = ak.DataFrame({\"src\":src_subgraph, \"dst\":dst_subgraph,\n",
+    "                        \"value\":rels1_subgraph \n",
+    "})\n",
+    "node_df = ak.DataFrame({\"nodes\":ak.array(subgraph_nodes),\n",
+    "                        \"color\":labels1_subgraph,\n",
+    "                        \"value\":labels2_subgraph,\n",
+    "                        \"True?\":labels3_subgraph,\n",
+    "                        \"cats\":labels4_subgraph\n",
+    "})\n",
     "\n",
-    "print(sg.edges()[0])\n",
-    "print(sg.edges()[1])"
+    "sg = ar.PropGraph()\n",
+    "sg.load_edge_attributes(edge_df, source_column=\"src\", destination_column=\"dst\", convert_string_relationships_to_categoricals=False)\n",
+    "sg.load_node_attributes(node_df, node_column=\"nodes\", convert_string_labels_to_categoricals=False)\n",
+    "\n",
+    "isos_as_vertices = ar.subgraph_isomorphism(pg, sg, \n",
+    "                                           semantic_check = \"or\", algorithm_type = \"si\", \n",
+    "                                           reorder = False, return_isos_as = \"vertices\")\n",
+    "print(f\"We found {len(isos_as_vertices[0])/len(sg)} monos inside of the graph without reordering\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "55313cfc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"TEST VF2-PS ON SIMPLE GRAPH\"\"\"\n",
+    "edge_df = ak.DataFrame({\"src\":src_subgraph, \"dst\":dst_subgraph,\n",
+    "                        \"value\":rels1_subgraph \n",
+    "})\n",
+    "node_df = ak.DataFrame({\"nodes\":ak.array(subgraph_nodes),\n",
+    "                        \"color\":labels1_subgraph,\n",
+    "                        \"value\":labels2_subgraph,\n",
+    "                        \"True?\":labels3_subgraph,\n",
+    "                        \"cats\":labels4_subgraph\n",
+    "})\n",
+    "\n",
+    "sg = ar.PropGraph()\n",
+    "sg.load_edge_attributes(edge_df, source_column=\"src\", destination_column=\"dst\", convert_string_relationships_to_categoricals=False)\n",
+    "sg.load_node_attributes(node_df, node_column=\"nodes\", convert_string_labels_to_categoricals=False)\n",
+    "\n",
+    "isos_as_vertices = ar.subgraph_isomorphism(pg, sg, \n",
+    "                                           semantic_check = \"or\", algorithm_type = \"ps\", \n",
+    "                                           reorder = False, return_isos_as = \"vertices\")\n",
+    "print(f\"We found {len(isos_as_vertices[0])/len(sg)} monos inside of the graph with VF2-PS\")"
    ]
   },
   {
@@ -174,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 35,
    "id": "e0ab4242",
    "metadata": {},
    "outputs": [],
@@ -305,7 +327,7 @@
     "subgraph.load_node_attributes(node_df_h, node_column = \"nodes\")\n",
     "\n",
     "isos_as_vertices = ar.subgraph_isomorphism(prop_graph, subgraph, \n",
-    "                                           semantic_check=\"or\", algorithm_type=\"si\", return_isos_as=\"vertices\")\n",
+    "                                           semantic_check=\"or\", algorithm_type=\"si\", return_isos_as=\"vertices\", reorder=True)\n",
     "print(f\"We found {len(isos_as_vertices[0])/len(subgraph)} isos inside of the graph\")"
    ]
   },
