--- a/arachne/subgraph_matching_with_random_graphs_sample.ipynb
+++ b/arachne/subgraph_matching_with_random_graphs_sample.ipynb
@@ -2,10 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 1,
    "id": "f651e065",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    _         _                   _       \n",
+      "   / \\   _ __| | _____  _   _  __| | __ _ \n",
+      "  / _ \\ | '__| |/ / _ \\| | | |/ _` |/ _` |\n",
+      " / ___ \\| |  |   < (_) | |_| | (_| | (_| |\n",
+      "/_/   \\_\\_|  |_|\\_\\___/ \\__,_|\\__,_|\\__,_|\n",
+      "                                          \n",
+      "\n",
+      "Client Version: v2024.06.21+0.gcf6eeacde.dirty\n"
+     ]
+    }
+   ],
    "source": [
     "import arkouda as ak\n",
     "import arachne as ar\n",
@@ -17,10 +32,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "671cb378",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "connected to arkouda server tcp://*:5555\n"
+     ]
+    }
+   ],
    "source": [
     "# NOTE: Make sure to change the server name to whatever is applicable in your environment. If running locally, then use only ak.connect().\n",
     "ak.connect(\"n115\", 5555)"
@@ -36,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 3,
    "id": "0e3a275a",
    "metadata": {},
    "outputs": [],
@@ -69,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 4,
    "id": "f38fcded",
    "metadata": {},
    "outputs": [],
@@ -81,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 5,
    "id": "9aa2b97c",
    "metadata": {},
    "outputs": [],
@@ -104,10 +127,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "35198cf9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "We found 2.0 monos inside of the graph with reordering\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"TEST COMBINED PICKER ON SIMPLE GRAPH\"\"\"\n",
     "edge_df = ak.DataFrame({\"src\":src_subgraph, \"dst\":dst_subgraph,\n",
@@ -132,10 +163,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "4e309a93",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "We found 2.0 monos inside of the graph without reordering\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"TEST COMBINED PICKER ON SIMPLE GRAPH\"\"\"\n",
     "edge_df = ak.DataFrame({\"src\":src_subgraph, \"dst\":dst_subgraph,\n",
@@ -160,10 +199,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "55313cfc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "We found 2.0 monos inside of the graph with VF2-PS\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"TEST VF2-PS ON SIMPLE GRAPH\"\"\"\n",
     "edge_df = ak.DataFrame({\"src\":src_subgraph, \"dst\":dst_subgraph,\n",
