--- a/arachne/subgraph_matching_with_random_graphs_sample.ipynb
+++ b/arachne/subgraph_matching_with_random_graphs_sample.ipynb
@@ -2,25 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "f651e065",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "    _         _                   _       \n",
-      "   / \\   _ __| | _____  _   _  __| | __ _ \n",
-      "  / _ \\ | '__| |/ / _ \\| | | |/ _` |/ _` |\n",
-      " / ___ \\| |  |   < (_) | |_| | (_| | (_| |\n",
-      "/_/   \\_\\_|  |_|\\_\\___/ \\__,_|\\__,_|\\__,_|\n",
-      "                                          \n",
-      "\n",
-      "Client Version: v2024.06.21+0.gcf6eeacde.dirty\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import arkouda as ak\n",
     "import arachne as ar\n",
@@ -32,18 +17,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "671cb378",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "connected to arkouda server tcp://*:5555\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# NOTE: Make sure to change the server name to whatever is applicable in your environment. If running locally, then use only ak.connect().\n",
     "ak.connect(\"n115\", 5555)"
@@ -127,18 +104,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "35198cf9",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "We found 2.0 monos inside of the graph with reordering\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"TEST COMBINED PICKER ON SIMPLE GRAPH\"\"\"\n",
     "edge_df = ak.DataFrame({\"src\":src_subgraph, \"dst\":dst_subgraph,\n",
@@ -163,18 +132,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "4e309a93",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "We found 2.0 monos inside of the graph without reordering\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"TEST COMBINED PICKER ON SIMPLE GRAPH\"\"\"\n",
     "edge_df = ak.DataFrame({\"src\":src_subgraph, \"dst\":dst_subgraph,\n",
@@ -199,18 +160,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "55313cfc",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "We found 2.0 monos inside of the graph with VF2-PS\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"TEST VF2-PS ON SIMPLE GRAPH\"\"\"\n",
     "edge_df = ak.DataFrame({\"src\":src_subgraph, \"dst\":dst_subgraph,\n",
@@ -231,6 +184,305 @@
     "                                           semantic_check = \"or\", algorithm_type = \"ps\", \n",
     "                                           reorder = False, return_isos_as = \"vertices\")\n",
     "print(f\"We found {len(isos_as_vertices[0])/len(sg)} monos inside of the graph with VF2-PS\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0f12053a",
+   "metadata": {},
+   "source": [
+    "### Experiments from Mohammad"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "ec88dcc8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "connected to arkouda server tcp://*:5555\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Building property graph with 100000 vertices and 2498794 edges took 2.06 seconds.\n",
+      "Property graph created with random node and edge attributes.\n",
+      "Subgraph created with node and edge attributes successfully.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import arkouda as ak\n",
+    "import arachne as ar\n",
+    "import scipy as sp\n",
+    "import networkx as nx\n",
+    "import matplotlib.pyplot as plt\n",
+    "import os\n",
+    "import time\n",
+    "\n",
+    "ak.connect(\"n114\", 5555)\n",
+    "n = 100\n",
+    "m = 1000\n",
+    "s = 2\n",
+    "x = 2\n",
+    "y = 2\n",
+    "p = 0.0005\n",
+    "num_nodes = 100_000\n",
+    "\n",
+    "# ### Build graph from randomly generated source and destination arrays.\n",
+    "# # 1. Use Arkouda's randint to generate the random edge arrays.\n",
+    "\n",
+    "# def create_random_directed_graph(num_nodes, p):\n",
+    "#     \"\"\"\n",
+    "#     Generates a random directed graph (Erdős-Rényi model) and returns the src and dst arrays.\n",
+    "    \n",
+    "#     Parameters:\n",
+    "#     num_nodes (int): Number of nodes in the graph.\n",
+    "#     p (float): Probability of creating an edge between two nodes.\n",
+    "    \n",
+    "#     Returns:\n",
+    "#     tuple: A tuple containing two lists (src, dst) representing the source and destination of each edge.\n",
+    "#     \"\"\"\n",
+    "#     # Create a random graph using Erdős–Rényi model\n",
+    "#     random_graph = nx.gnp_random_graph(num_nodes, p, seed=42, directed=True)\n",
+    "\n",
+    "#     # Extract src and dst arrays\n",
+    "#     src = [edge[0] for edge in random_graph.edges()]\n",
+    "#     dst = [edge[1] for edge in random_graph.edges()]\n",
+    "\n",
+    "#     return src, dst\n",
+    "\n",
+    "\n",
+    "# p = 0.0005  # Probability of edge creation\n",
+    "# num_nodes = 2000\n",
+    "\n",
+    "# print(\"Begining of Random Directed graph with P= \",p)\n",
+    "# src_rand, dst_rand = create_random_directed_graph(num_nodes, p)\n",
+    "# print(\"Random Directed graph created\")\n",
+    "\n",
+    "\n",
+    "# src = ak.array(src_rand)\n",
+    "# dst = ak.array(dst_rand)\n",
+    "\n",
+    "\n",
+    "# # 2. Build temporary property graph to get sorted edges and nodes lists.\n",
+    "# temp_prop_graph = ar.PropGraph()\n",
+    "# start = time.time()\n",
+    "# temp_prop_graph.add_edges_from(src, dst)\n",
+    "# end = time.time()\n",
+    "# build_time = end - start\n",
+    "\n",
+    "# print(f\"Building property graph with {len(temp_prop_graph)} vertices and \"\n",
+    "#         f\"{temp_prop_graph.size()} \"\n",
+    "#         f\"edges took {round(build_time,2)} seconds.\")\n",
+    "\n",
+    "start = time.time()\n",
+    "temp_prop_graph = ar.gnp(num_nodes, p, create_using=ar.PropGraph)\n",
+    "end = time.time()\n",
+    "build_time = end - start\n",
+    "\n",
+    "print(f\"Building property graph with {len(temp_prop_graph)} vertices and \"\n",
+    "        f\"{temp_prop_graph.size()} \"\n",
+    "        f\"edges took {round(build_time,2)} seconds.\")\n",
+    "\n",
+    "### Generate node labels and edge relationships for the graph.\n",
+    "# 1. Extract node and edge information.\n",
+    "num_edges = temp_prop_graph.size()\n",
+    "num_nodes = len(temp_prop_graph)\n",
+    "edges = temp_prop_graph.edges()\n",
+    "nodes = temp_prop_graph.nodes()\n",
+    "\n",
+    "##############################################\n",
+    "# NEW SECTION: Generate random node and edge attributes\n",
+    "##############################################\n",
+    "\n",
+    "# For nodes:\n",
+    "# 2.1. Categorical from [\"blue\", \"red\", \"yellow\"]\n",
+    "colors = ak.array([\"blue\", \"red\"])\n",
+    "node_colors = colors[ak.randint(0, len(colors), num_nodes)]\n",
+    "\n",
+    "# 2.2. Integer from 10 to 12 (inclusive)\n",
+    "node_ints = ak.randint(10, 12, num_nodes)\n",
+    "\n",
+    "# 2.3. Boolean from [False, True]\n",
+    "bool_choices = ak.array([False, True])\n",
+    "node_bools = bool_choices[ak.randint(0, 2, num_nodes)]\n",
+    "\n",
+    "# For edges:\n",
+    "# 2.4. Randomly choose from [5, 10, 15]\n",
+    "edge_choices = ak.array([5, 10])\n",
+    "edge_vals = edge_choices[ak.randint(0, 2, num_edges)]\n",
+    "\n",
+    "##############################################\n",
+    "# Create dataframes with the new attributes\n",
+    "##############################################\n",
+    "\n",
+    "edge_df = ak.DataFrame({\n",
+    "    \"src\": edges[0],\n",
+    "    \"dst\": edges[1],\n",
+    "    \"edge_attr\": edge_vals\n",
+    "})\n",
+    "\n",
+    "node_df = ak.DataFrame({\n",
+    "    \"nodes\": nodes,\n",
+    "    \"color\": node_colors,\n",
+    "    \"int_attr\": node_ints,\n",
+    "    \"bool_attr\": node_bools\n",
+    "})\n",
+    "\n",
+    "##############################################\n",
+    "# Create the new property graph with these attributes\n",
+    "##############################################\n",
+    "\n",
+    "prop_graph = ar.PropGraph()\n",
+    "prop_graph.load_edge_attributes(\n",
+    "    edge_df, source_column=\"src\", destination_column=\"dst\", \n",
+    "    relationship_columns=[\"edge_attr\"]\n",
+    ")\n",
+    "\n",
+    "prop_graph.load_node_attributes(\n",
+    "    node_df, node_column=\"nodes\", \n",
+    "    label_columns=[\"color\", \"int_attr\", \"bool_attr\"]\n",
+    ")\n",
+    "\n",
+    "print(\"Property graph created with random node and edge attributes.\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "### Create the subgraph we are searching for.\n",
+    "# 1. Create labels and relationships to search for.\n",
+    "src_list = [0, 1, 2, 1]\n",
+    "dst_list = [1, 2, 0, 3]\n",
+    "\n",
+    "src_subgraph = ak.array(src_list)\n",
+    "dst_subgraph = ak.array(dst_list)\n",
+    "\n",
+    "subgraph_nodes = list(set(src_list) | set(dst_list))\n",
+    "subgraph_nodes.sort()\n",
+    "\n",
+    "labels1_subgraph = ak.array([\"blue\", \"blue\", \"red\", \"red\"])\n",
+    "labels2_subgraph = ak.array([10, 11, 11, 10])\n",
+    "labels3_subgraph = ak.array([True, True, True, False])\n",
+    "\n",
+    "rels1_subgraph = ak.array([10, 10, 10, 5])\n",
+    "\n",
+    "subgraph = ar.PropGraph()\n",
+    "\n",
+    "# Include rels1_subgraph as an attribute for edges\n",
+    "edge_df_h = ak.DataFrame({\n",
+    "    \"src\": src_subgraph,\n",
+    "    \"dst\": dst_subgraph,\n",
+    "    # \"rels1\": rels1_subgraph\n",
+    "})\n",
+    "\n",
+    "# Include the third label/attribute as well for nodes\n",
+    "node_df_h = ak.DataFrame({\n",
+    "    \"nodes\": ak.array(subgraph_nodes),\n",
+    "    \"lbls1\": labels1_subgraph,\n",
+    "    \"lbls2\": labels2_subgraph,\n",
+    "    \"lbls3\": labels3_subgraph\n",
+    "})\n",
+    "\n",
+    "# Now load the attributes into the subgraph\n",
+    "# Treat 'rels1' as an edge relationship attribute\n",
+    "subgraph.load_edge_attributes(edge_df_h, \n",
+    "                              source_column=\"src\", \n",
+    "                              destination_column=\"dst\",\n",
+    "                              # relationship_columns=[\"rels1\"]\n",
+    "                            )\n",
+    "\n",
+    "# Treat lbls1, lbls2, and lbls3 as node label attributes\n",
+    "# subgraph.load_node_attributes(node_df_h, \n",
+    "#                               node_column=\"nodes\",\n",
+    "#                               label_columns=[\"lbls1\",\"lbls2\",\"lbls3\"])\n",
+    "\n",
+    "print(\"Subgraph created with node and edge attributes successfully.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "c8af136f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "We found 0.0 monos inside of the graph\n"
+     ]
+    }
+   ],
+   "source": [
+    "isos_as_vertices = ar.subgraph_isomorphism(prop_graph, subgraph, \n",
+    "                                           semantic_check = \"and\", algorithm_type = \"si\", \n",
+    "                                           reorder = True, return_isos_as = \"vertices\")\n",
+    "\n",
+    "print(f\"We found {len(isos_as_vertices[0])/len(subgraph)} monos inside of the graph\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "4c90f39a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "We found 0.0 monos inside of the graph\n"
+     ]
+    }
+   ],
+   "source": [
+    "isos_as_vertices = ar.subgraph_isomorphism(prop_graph, subgraph,\n",
+    "                                           semantic_check = None, algorithm_type = \"si\",\n",
+    "                                           reorder = False, return_isos_as = \"vertices\")\n",
+    "\n",
+    "print(f\"We found {len(isos_as_vertices[0])/len(subgraph)} monos inside of the graph\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "68667611",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "isos_as_vertices = ar.subgraph_isomorphism(prop_graph, subgraph, \n",
+    "                                           semantic_check = \"and\", algorithm_type = \"ps\", \n",
+    "                                           reorder = True, return_isos_as = \"vertices\")\n",
+    "\n",
+    "print(f\"We found {len(isos_as_vertices[0])/len(subgraph)} monos inside of the graph\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "f6144d90",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "We found 0.0 monos inside of the graph\n"
+     ]
+    }
+   ],
+   "source": [
+    "isos_as_vertices = ar.subgraph_isomorphism(prop_graph, subgraph, \n",
+    "                                           semantic_check = None, algorithm_type = \"ps\", \n",
+    "                                           reorder = False, return_isos_as = \"vertices\")\n",
+    "\n",
+    "print(f\"We found {len(isos_as_vertices[0])/len(subgraph)} monos inside of the graph\")"
    ]
   },
   {
