--- a/arachne/subgraph_matching_with_random_graphs_sample.ipynb
+++ b/arachne/subgraph_matching_with_random_graphs_sample.ipynb
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 58,
    "id": "ec88dcc8",
    "metadata": {},
    "outputs": [
@@ -211,7 +211,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Building property graph with 100000 vertices and 2498794 edges took 2.06 seconds.\n",
+      "Building property graph with 1000000 vertices and 249964734 edges took 11.73 seconds.\n",
       "Property graph created with random node and edge attributes.\n",
       "Subgraph created with node and edge attributes successfully.\n"
      ]
@@ -233,7 +233,7 @@
     "x = 2\n",
     "y = 2\n",
     "p = 0.0005\n",
-    "num_nodes = 100_000\n",
+    "num_nodes = 1_000_000\n",
     "\n",
     "# ### Build graph from randomly generated source and destination arrays.\n",
     "# # 1. Use Arkouda's randint to generate the random edge arrays.\n",
@@ -257,10 +257,6 @@
     "#     dst = [edge[1] for edge in random_graph.edges()]\n",
     "\n",
     "#     return src, dst\n",
-    "\n",
-    "\n",
-    "# p = 0.0005  # Probability of edge creation\n",
-    "# num_nodes = 2000\n",
     "\n",
     "# print(\"Begining of Random Directed graph with P= \",p)\n",
     "# src_rand, dst_rand = create_random_directed_graph(num_nodes, p)\n",
@@ -378,7 +374,7 @@
     "edge_df_h = ak.DataFrame({\n",
     "    \"src\": src_subgraph,\n",
     "    \"dst\": dst_subgraph,\n",
-    "    # \"rels1\": rels1_subgraph\n",
+    "    \"rels1\": rels1_subgraph\n",
     "})\n",
     "\n",
     "# Include the third label/attribute as well for nodes\n",
@@ -394,20 +390,20 @@
     "subgraph.load_edge_attributes(edge_df_h, \n",
     "                              source_column=\"src\", \n",
     "                              destination_column=\"dst\",\n",
-    "                              # relationship_columns=[\"rels1\"]\n",
+    "                              relationship_columns=[\"rels1\"]\n",
     "                            )\n",
     "\n",
-    "# Treat lbls1, lbls2, and lbls3 as node label attributes\n",
-    "# subgraph.load_node_attributes(node_df_h, \n",
-    "#                               node_column=\"nodes\",\n",
-    "#                               label_columns=[\"lbls1\",\"lbls2\",\"lbls3\"])\n",
+    "Treat lbls1, lbls2, and lbls3 as node label attributes\n",
+    "subgraph.load_node_attributes(node_df_h, \n",
+    "                              node_column=\"nodes\",\n",
+    "                              label_columns=[\"lbls1\",\"lbls2\",\"lbls3\"])\n",
     "\n",
     "print(\"Subgraph created with node and edge attributes successfully.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 59,
    "id": "c8af136f",
    "metadata": {},
    "outputs": [
@@ -429,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 60,
    "id": "4c90f39a",
    "metadata": {},
    "outputs": [
@@ -443,7 +439,7 @@
    ],
    "source": [
     "isos_as_vertices = ar.subgraph_isomorphism(prop_graph, subgraph,\n",
-    "                                           semantic_check = None, algorithm_type = \"si\",\n",
+    "                                           semantic_check = \"and\", algorithm_type = \"si\",\n",
     "                                           reorder = False, return_isos_as = \"vertices\")\n",
     "\n",
     "print(f\"We found {len(isos_as_vertices[0])/len(subgraph)} monos inside of the graph\")"
@@ -451,10 +447,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "id": "68667611",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "We found 0.0 monos inside of the graph\n"
+     ]
+    }
+   ],
    "source": [
     "isos_as_vertices = ar.subgraph_isomorphism(prop_graph, subgraph, \n",
     "                                           semantic_check = \"and\", algorithm_type = \"ps\", \n",
@@ -465,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 62,
    "id": "f6144d90",
    "metadata": {},
    "outputs": [
@@ -479,7 +483,7 @@
    ],
    "source": [
     "isos_as_vertices = ar.subgraph_isomorphism(prop_graph, subgraph, \n",
-    "                                           semantic_check = None, algorithm_type = \"ps\", \n",
+    "                                           semantic_check = \"and\", algorithm_type = \"ps\", \n",
     "                                           reorder = False, return_isos_as = \"vertices\")\n",
     "\n",
     "print(f\"We found {len(isos_as_vertices[0])/len(subgraph)} monos inside of the graph\")"
